<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shoppinggate.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_AllCategories"
        android:name="com.shoppinggate.Fragments.Categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_mywishlist"
        android:name="com.shoppinggate.Fragments.MyWishlist_Fragment"
        android:label="@string/mywishlist"
        tools:layout="@layout/fragment_my_wishlist_" />

    <fragment
        android:id="@+id/nav_myorders"
        android:name="com.shoppinggate.Fragments.MyOrders"
        android:label="@string/myorders"
        tools:layout="@layout/fragment_my_orders" />

    <activity
        android:id="@+id/nav_language"
        android:name="com.shoppinggate.Activites.Language"
        android:label="@string/language"
        tools:layout="@layout/activity_language" />

    <activity
        android:id="@+id/nav_sharewithfriends"
        android:name="com.shoppinggate.Activites.ui.share.ShareFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/activity_share_with_friends" />

    <activity
        android:id="@+id/nav_rateus"
        android:name="com.shoppinggate.Activites.RateUs"
        android:label="@string/rateus"
        tools:layout="@layout/activity_rate_us" />
</navigation>