<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".Fragments.EditProfile">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProfile"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkblue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:text="@string/edit"
        android:textColor="#fff"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/E_NameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbarProfile"
        app:layout_constraintTop_toTopOf="@+id/toolbarProfile"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/e_country"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f2f2f2"
        android:drawableStart="@drawable/icon_map"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/e_country"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_date" />

    <EditText
        android:id="@+id/e_city"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f2f2f2"
        android:drawableStart="@drawable/icon_map"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/e_city"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_country" />

    <EditText
        android:id="@+id/e_street"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f2f2f2"
        android:drawableStart="@drawable/icon_map"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/street"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_country" />

    <EditText
        android:id="@+id/e_date"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#f2f2f2"
        android:drawableStart="@drawable/icon_date"
        android:drawablePadding="10dp"
        android:enabled="false"
        android:ems="10"
        android:hint="@string/birth"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/persnoalinformation"
        android:textColor="#d2872a"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_PasswordRegister" />

    <Button
        android:id="@+id/Btn_SinUp"
        android:layout_width="310dp"
        android:layout_height="45dp"

        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/confirm"
        android:textColor="#fff"
        android:background="@drawable/bc_login"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_street"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/E_NameRegister"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="@dimen/_90sdp"
        android:backgroundTint="#f2f2f2"
        android:digits="abcdefghijklmnopqrs tuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/e_PhoneRegister"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f2f2f2"
        android:drawableStart="@drawable/icon_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="number"
        android:maxLength="20"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/E_NameRegister" />

    <EditText
        android:id="@+id/e_EmailRegister"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f2f2f2"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_PhoneRegister" />

    <EditText
        android:id="@+id/e_PasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#f2f2f2"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#a2a2a2"
        android:textColorHint="#a2a2a2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_EmailRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>